--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
+    "mysql2": "^3.6.5",
     "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18"
